load("@io_bazel_rules_docker//container:container.bzl", "container_image")

sh_test(
    name = "sig_failover_test",
    size = "small",
    srcs = ["test"],
    data = [
        "//go/tools/udpproxy:udpproxy",
        ":dispatcher1",
        ":dispatcher2",
        ":sig1",
        ":sig2",
        "docker-compose.yml",
    ],
)

container_image(
    name = "dispatcher1",
    base = "//docker:dispatcher_debug",
    files = ["testdata/1-ff00_0_110/dispatcher/disp.toml"],
    entrypoint = [
        "/app/dispatcher",
        "-config",
        "/disp.toml",
    ],
    stamp = True,
)

container_image(
    name = "dispatcher2",
    base = "//docker:dispatcher_debug",
    files = ["testdata/1-ff00_0_111/dispatcher/disp.toml"],
    entrypoint = [
        "/app/dispatcher",
        "-config",
        "/disp.toml",
    ],
    stamp = True,
)

container_image(
    name = "sig1",
    base = "//docker:sig_debug",
    files = [
        "testdata/1-ff00_0_110/sig/cfg.json",
        "testdata/1-ff00_0_110/sig/sig.toml",
        "testdata/1-ff00_0_110/sig/fake_sciond.json",
    ],
    entrypoint = [
        "/app/sig",
        "-config",
        "/sig.toml",
    ],
    stamp = True,
)

container_image(
    name = "sig2",
    base = "//docker:sig_debug",
    files = [
        "testdata/1-ff00_0_111/sig/cfg.json",
        "testdata/1-ff00_0_111/sig/sig.toml",
        "testdata/1-ff00_0_111/sig/fake_sciond.json",
    ],
    entrypoint = [
        "/app/sig",
        "-config",
        "/sig.toml",
    ],
    stamp = True,
)
