load("//acceptance/common:topogen.bzl", "topogen_test")

topogen_test(
    name = "test",
    src = "test.py",
    args = [
        "--gateway_acceptance",
        "$(location //go/acceptance/sig_ping_acceptance)",
    ],
    data = [
        "//go/acceptance/sig_ping_acceptance",
    ],
    gateway = True,
    topo = "//topology:tiny4.topo",
)
